--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Industrial Solutions | Spesialis Peralatan Pabrik</title>
+    <title>Samudra Muda Indonesia | Spesialis Peralatan Pabrik</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -631,7 +631,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo"><i class="fas fa-industry"></i>Industrial<span>Solutions</span></a>
+                <a href="#" class="logo"><i class="fas fa-industry"></i>Samudra<span>Muda</span>Indonesia</a>
                 <ul class="nav-links">
                     <li><a href="#">Beranda</a></li>
                     <li><a href="#">Produk</a></li>
@@ -922,3 +922,4 @@
     </script>
 </body>
 </html>
+
