--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                     <h3>Kontak Kami</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Jl. Industri Raya No. 123, Jakarta</p>
                     <p><i class="fas fa-phone"></i> +62 21 1234 5678</p>
-                    <p><i class="fas fa-envelope"></i> info@industrialsolutions.co.id</p>
+                    <p><i class="fas fa-envelope"></i> info@samudramudaindonesia.co.id</p>
                     <p><i class="fas fa-clock"></i> Senin - Jumat: 08:00 - 17:00</p>
                 </div>
             </div>
@@ -922,4 +922,5 @@
     </script>
 </body>
 </html>
+
 
