--- a/index.html
+++ b/index.html
@@ -678,9 +678,9 @@
                         <i class="fas fa-cogs"></i>
                     </div>
                     <div class="product-info">
-                        <h3>Mesin Produksi</h3>
-                        <div class="price">Rp 250jt - 1.5M</div>
-                        <p>Mesin produksi otomatis dengan teknologi terkini untuk meningkatkan efisiensi dan output pabrik Anda.</p>
+                        <h3>Lampu Explosion Proof</h3>
+                        <div class="price">Rp 2.5jt - 4jt</div>
+                        <p>Jenis lampu industri yang dirancang khusus untuk mencegah ledakan di lingkungan berbahaya.</p>
                         <div class="product-meta">
                             <a href="#" class="btn">Detail</a>
                         </div>
@@ -692,9 +692,9 @@
                         <i class="fas fa-conveyor-belt"></i>
                     </div>
                     <div class="product-info">
-                        <h3>Sistem Konveyor</h3>
+                        <h3>Solar Panel</h3>
                         <div class="price">Rp 150jt - 800jt</div>
-                        <p>Sistem konveyor canggih untuk optimasi alur material dan produk dalam proses produksi.</p>
+                        <p>Alat yang mengubah energi cahaya matahari menjadi energi listrik melalui efek fotovoltaik.</p>
                         <div class="product-meta">
                             <a href="#" class="btn">Detail</a>
                         </div>
@@ -706,9 +706,9 @@
                         <i class="fas fa-robot"></i>
                     </div>
                     <div class="product-info">
-                        <h3>Automation System</h3>
-                        <div class="price">Rp 500jt - 2.5M</div>
-                        <p>Sistem otomasi industri terintegrasi untuk mengoptimalkan seluruh proses manufaktur.</p>
+                        <h3>Smartwatch explosion proof</h3>
+                        <div class="price">Rp 500k - 700k</div>
+                        <p>Tingkatkan standar keselamatan di lingkungan kerja berbahaya dengan smartwatch ex proof.</p>
                         <div class="product-meta">
                             <a href="#" class="btn">Detail</a>
                         </div>
@@ -922,6 +922,7 @@
     </script>
 </body>
 </html>
+
 
 
 
