--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                     </div>
                     <div class="product-info">
                         <h3>Solar Panel</h3>
-                        <div class="price">Rp 150jt - 800jt</div>
+                        <div class="price">Rp 750k - 3.5jt</div>
                         <p>Alat yang mengubah energi cahaya matahari menjadi energi listrik melalui efek fotovoltaik.</p>
                         <div class="product-meta">
                             <a href="#" class="btn">Detail</a>
@@ -922,6 +922,7 @@
     </script>
 </body>
 </html>
+
 
 
 
